src/routes/about/style.css
.about {
  position: relative;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
 
}

.main:nth-child(2) .about  {
  margin-top: 0;
}

.about:nth-child(1) {
  margin-top: 0;
  position: relative;
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  gap: 1rem;
  height: 100%;
}

.aboutSection {
  position: relative;
  z-index: 10;
}

.aboutContent {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  gap: 1rem;
  height: 100%;
}

.spanColor {
  color: var(--color-primary-dark);
  white-space: nowrap;

}

.textFeature p {
  margin: 0;

}

.spanColor span {
  color: var(--color-cherry);
}

.headingEd {
  position: relative;
}

.paddingTop {
  padding-top: 1rem;
}

.address {
  color: var(--color-primary-dark);
  font-weight: var(--font-weight-thin);
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.text {
  position: relative;
  z-index:2;
}

@media screen and (max-width: 890px) {

  .aboutContent {
    margin-top: 2rem;
  }
 
  .about {
    display: flex;
    flex-direction: column;
  }

  .about .image {
    order: 2;
  }
  .about .text {
    order: 1;
  }
}

